Fix page height no scrollbar

--- a/frontend/components/ChatPageSwitch.css
+++ b/frontend/components/ChatPageSwitch.css
@@ -15,11 +15,16 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  position: relative;
 }
 
-.ChatPageSwitch .Channel {
-  position: relative;
-  height: 100%;
+.ChatPageSwitch .Layout__body > div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow: hidden;
 }
 
 .Layout__threads {
